# bazel-axivion-showcase

./: .bazelrc  .gitignore  BUILD.bazel  README.md
main/: main.cc
support/: BUILD.bazel
support/axivion/: BUILD.bazel  cc_wrapper.sh
